example/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: test-alb
  labels:
    app: test-alb
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: test-alb
  type: NodePort
  externalTrafficPolicy: Cluster
