example/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    # acm certificate
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:<account>:certificate/<id>
    alb.ingress.kubernetes.io/group.name: default-prod-apps
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
  name: test-alb
spec:
  ingressClassName: alb
  rules:
  - host: test-alb.moon.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-alb
            port:
              number: 80
